--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,9 @@
     <title>이건 못 먹지</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta property="og:title" content="이건 못 먹지"/>
+    <meta property="og:description" content="항해99 4기 첫번째 미니 프로젝트 - 25조(고성범, 배은지, 이도연)"/>
+    <meta property="og:image" content="{{ url_for('static', filename='og.png') }}"/>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -38,7 +41,7 @@
                 let hyperlink = recipes[i]['hyperlink']
                 let image = recipes[i]['image']
                 let description = recipes[i]['description']
-                if(typeof description == 'undefined')
+                if (typeof description == 'undefined')
                     description = '설명 없음'
                 let ingredient = recipes[i]['ingredient']
                 let category = recipes[i]['category']
@@ -217,11 +220,21 @@
     <label id="lets-click">제외 원하는 재료를 클릭해 보세요!</label>
 
     <div class="category-button">
-        <button type="button" onclick="filterRecipes('category1')" class="btn btn-info"><img class="btn-img" src="/static/meat.png">육류</button>
-        <button type="button" onclick="filterRecipes('category2')" class="btn btn-info"><img class="btn-img" src="/static/crab.png">해산물</button>
-        <button type="button" onclick="filterRecipes('category5')" class="btn btn-info"><img class="btn-img" src="/static/vege.png">채소</button>
-        <button type="button" onclick="filterRecipes('category4')" class="btn btn-info"><img class="btn-img" src="/static/bread.png">탄수화물</button>
-        <button type="button" onclick="filterRecipes('category3')" class="btn btn-info"><img class="btn-img" src="/static/milk.png">유제품</button>
+        <button type="button" onclick="filterRecipes('category1')" class="btn btn-info"><img class="btn-img"
+                                                                                             src="/static/meat.png">육류
+        </button>
+        <button type="button" onclick="filterRecipes('category2')" class="btn btn-info"><img class="btn-img"
+                                                                                             src="/static/crab.png">해산물
+        </button>
+        <button type="button" onclick="filterRecipes('category5')" class="btn btn-info"><img class="btn-img"
+                                                                                             src="/static/vege.png">채소
+        </button>
+        <button type="button" onclick="filterRecipes('category4')" class="btn btn-info"><img class="btn-img"
+                                                                                             src="/static/bread.png">탄수화물
+        </button>
+        <button type="button" onclick="filterRecipes('category3')" class="btn btn-info"><img class="btn-img"
+                                                                                             src="/static/milk.png">유제품
+        </button>
     </div>
 
 
