--- a/templates/index.html
+++ b/templates/index.html
@@ -35,6 +35,8 @@
             showRecipes();
         });
 
+        //서버에서 받은 데이터를 필터링을 해야하면 필터링 이미지로 대체해서
+        //아니면 그대로 데이터를 카드뷰로 보여주는 helping function
         function showRecipesHelp(recipes) {
             for (let i = 0; i < recipes.length; i++) {
                 let title = recipes[i]['title']
