--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+{#flash로 받은 메세지 띄우기("이미 추가된 레시피입니다." /"찜완료!")#}
 {% with messages = get_flashed_messages() %}
     {% if messages %}
         <script type="text/javascript">
