--- a/templates/mypage_wishlist.html
+++ b/templates/mypage_wishlist.html
@@ -1,3 +1,4 @@
+{#flash로 받은 메세지 띄우기("찜삭제 완료!")#}
 {% with messages = get_flashed_messages() %}
     {% if messages %}
         <script type="text/javascript">
