211106 성범 - code block 표시

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,6 +36,7 @@
             showRecipes();
         });
 
+        //code block #1
         //서버에서 받은 데이터를 필터링을 해야하면 필터링 이미지로 대체해서
         //아니면 그대로 데이터를 카드뷰로 보여주는 helping function
         function showRecipesHelp(recipes) {
